// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render CategoriesList with categories 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Category
    </div>
    <div
      className="show-for-desktop"
    >
      Categories
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <Connect(CategoriesListItem)
      id="1"
      key="1"
      name="Food"
    />
    <Connect(CategoriesListItem)
      id="2"
      key="2"
      name="Bill"
    />
    <Connect(CategoriesListItem)
      id="3"
      key="3"
      name="Transportation"
    />
  </div>
</div>
`;

exports[`should render CategoriesList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Category
    </div>
    <div
      className="show-for-desktop"
    >
      Categories
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No categories available
      </span>
    </div>
  </div>
</div>
`;
